Добавили GameState и вывод на экран топового игрока

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -123,6 +123,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/MenuSystem.MultiplayerCharacter.DissolveMaterialInstance",NewName="/Script/MenuSystem.MultiplayerCharacter.DissolveDynamicMaterialInstance")
 +ClassRedirects=(OldName="/Script/MenuSystem.MyClass",NewName="/Script/MenuSystem.MultiplayerPlayerState")
 +FunctionRedirects=(OldName="/Script/MenuSystem.CombatComponent.Server_PlayReloadMontage",NewName="/Script/MenuSystem.CombatComponent.Server_Reload")
++PropertyRedirects=(OldName="/Script/MenuSystem.MultiplayerGameState.TopPlayerStates",NewName="/Script/MenuSystem.MultiplayerGameState.TopScoringPlayers")
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 PremadeMacEntitlements=(FilePath="")
