Добавление первого HitScan Weapon - пистолет

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -124,6 +124,8 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +ClassRedirects=(OldName="/Script/MenuSystem.MyClass",NewName="/Script/MenuSystem.MultiplayerPlayerState")
 +FunctionRedirects=(OldName="/Script/MenuSystem.CombatComponent.Server_PlayReloadMontage",NewName="/Script/MenuSystem.CombatComponent.Server_Reload")
 +PropertyRedirects=(OldName="/Script/MenuSystem.MultiplayerGameState.TopPlayerStates",NewName="/Script/MenuSystem.MultiplayerGameState.TopScoringPlayers")
++ClassRedirects=(OldName="/Script/MenuSystem.HeatScanWepoan",NewName="/Script/MenuSystem.HitScanWeapon")
++ClassRedirects=(OldName="/Script/MenuSystem.HeatScanWeapon",NewName="/Script/MenuSystem.HitScanWeapon")
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 PremadeMacEntitlements=(FilePath="")
