Добавили дымовой след от выстрела для пистолета

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -126,6 +126,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/MenuSystem.MultiplayerGameState.TopPlayerStates",NewName="/Script/MenuSystem.MultiplayerGameState.TopScoringPlayers")
 +ClassRedirects=(OldName="/Script/MenuSystem.HeatScanWepoan",NewName="/Script/MenuSystem.HitScanWeapon")
 +ClassRedirects=(OldName="/Script/MenuSystem.HeatScanWeapon",NewName="/Script/MenuSystem.HitScanWeapon")
++FunctionRedirects=(OldName="/Script/MenuSystem.HitScanWeapon.Multicast_SpawnBeamEffect",NewName="/Script/MenuSystem.HitScanWeapon.Client_SpawnBeamEffect")
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 PremadeMacEntitlements=(FilePath="")
