Добавили Grenade Launcher

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -127,6 +127,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +ClassRedirects=(OldName="/Script/MenuSystem.HeatScanWepoan",NewName="/Script/MenuSystem.HitScanWeapon")
 +ClassRedirects=(OldName="/Script/MenuSystem.HeatScanWeapon",NewName="/Script/MenuSystem.HitScanWeapon")
 +FunctionRedirects=(OldName="/Script/MenuSystem.HitScanWeapon.Multicast_SpawnBeamEffect",NewName="/Script/MenuSystem.HitScanWeapon.Client_SpawnBeamEffect")
++PropertyRedirects=(OldName="/Script/MenuSystem.ProjectileRocket.StaticMeshComponent",NewName="/Script/MenuSystem.ProjectileRocket.ProjectileMeshComponent")
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 PremadeMacEntitlements=(FilePath="")
