Добавим бросок гаранты , урон от ракеты

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,6 +30,7 @@ r.RayTracing=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.CustomDepth=3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -128,6 +129,9 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +ClassRedirects=(OldName="/Script/MenuSystem.HeatScanWeapon",NewName="/Script/MenuSystem.HitScanWeapon")
 +FunctionRedirects=(OldName="/Script/MenuSystem.HitScanWeapon.Multicast_SpawnBeamEffect",NewName="/Script/MenuSystem.HitScanWeapon.Client_SpawnBeamEffect")
 +PropertyRedirects=(OldName="/Script/MenuSystem.ProjectileRocket.StaticMeshComponent",NewName="/Script/MenuSystem.ProjectileRocket.ProjectileMeshComponent")
++PropertyRedirects=(OldName="/Script/MenuSystem.Projectile.RocketTrailEffect",NewName="/Script/MenuSystem.Projectile.ProjectileTrailEffect")
++PropertyRedirects=(OldName="/Script/MenuSystem.Projectile.RocketTrailEffectComponent",NewName="/Script/MenuSystem.Projectile.ProjectileTrailEffectComponent")
++PropertyRedirects=(OldName="/Script/MenuSystem.CombatComponent.StartingPAmmo",NewName="/Script/MenuSystem.CombatComponent.StartingPistolAmmo")
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 PremadeMacEntitlements=(FilePath="")
