Добавили SpeePickUP(бафф скорости), Healthpickup(восстановление здоровья) добавили к ним звуки и эффекты, все работает

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -132,6 +132,8 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/MenuSystem.Projectile.RocketTrailEffect",NewName="/Script/MenuSystem.Projectile.ProjectileTrailEffect")
 +PropertyRedirects=(OldName="/Script/MenuSystem.Projectile.RocketTrailEffectComponent",NewName="/Script/MenuSystem.Projectile.ProjectileTrailEffectComponent")
 +PropertyRedirects=(OldName="/Script/MenuSystem.CombatComponent.StartingPAmmo",NewName="/Script/MenuSystem.CombatComponent.StartingPistolAmmo")
++PropertyRedirects=(OldName="/Script/MenuSystem.Pickup.HealthPickupComponent",NewName="/Script/MenuSystem.Pickup.PickupEffectComponent")
++PropertyRedirects=(OldName="/Script/MenuSystem.Pickup.HealingEffect",NewName="/Script/MenuSystem.Pickup.PickupEffect")
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 PremadeMacEntitlements=(FilePath="")
