--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -134,6 +134,8 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/MenuSystem.CombatComponent.StartingPAmmo",NewName="/Script/MenuSystem.CombatComponent.StartingPistolAmmo")
 +PropertyRedirects=(OldName="/Script/MenuSystem.Pickup.HealthPickupComponent",NewName="/Script/MenuSystem.Pickup.PickupEffectComponent")
 +PropertyRedirects=(OldName="/Script/MenuSystem.Pickup.HealingEffect",NewName="/Script/MenuSystem.Pickup.PickupEffect")
++PropertyRedirects=(OldName="/Script/MenuSystem.BuffComponent.TimerPeriod",NewName="/Script/MenuSystem.BuffComponent.HealTimerPeriod")
++PropertyRedirects=(OldName="/Script/MenuSystem.BuffComponent.SpeedTimerPeriod",NewName="/Script/MenuSystem.BuffComponent.HealTimerPeriod")
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 PremadeMacEntitlements=(FilePath="")
