Добавили Shield Pickup для восстановление щита и добавили второстепенное оружие

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -136,6 +136,9 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/MenuSystem.Pickup.HealingEffect",NewName="/Script/MenuSystem.Pickup.PickupEffect")
 +PropertyRedirects=(OldName="/Script/MenuSystem.BuffComponent.TimerPeriod",NewName="/Script/MenuSystem.BuffComponent.HealTimerPeriod")
 +PropertyRedirects=(OldName="/Script/MenuSystem.BuffComponent.SpeedTimerPeriod",NewName="/Script/MenuSystem.BuffComponent.HealTimerPeriod")
++PropertyRedirects=(OldName="/Script/MenuSystem.CombatComponent.Weapon",NewName="/Script/MenuSystem.CombatComponent.PrimaryEquipWeapon")
++PropertyRedirects=(OldName="/Script/MenuSystem.CombatComponent.PrimaryWeapon",NewName="/Script/MenuSystem.CombatComponent.PrimaryEquipWeapon")
++FunctionRedirects=(OldName="/Script/MenuSystem.CombatComponent.OnRep_Weapon",NewName="/Script/MenuSystem.CombatComponent.OnRep_PrimaryEquipWeapon")
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 PremadeMacEntitlements=(FilePath="")
